--- a/Iphone review sentiment analysis.ipynb
+++ b/Iphone review sentiment analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "65b4f59d",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "4       Excellent Battery life and buttery smooth UI  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bf2e4e09",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7caf0edc",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "81b7cf36",
    "metadata": {},
    "outputs": [],
@@ -255,12 +255,12 @@
     "data['sentiment_review_text'] = get_sentiment_column(data['review_text'])\n",
     "\n",
     "# Save the result to a new CSV file and save on jupyter files\n",
-    "data.to_csv('datadna_dataset_with_sentiment.csv', index=False)"
+    "data.to_csv('datadna_dataset_with_sentiments.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "a196b83b",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "9               0.361905  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c0a82a4a",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,39 @@
       "[nltk_data]     C:\\Users\\Taofeekat\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# importing packages for sentimental analysis\n",
+    "from textblob import TextBlob\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "# Preprocess the data\n",
+    "stopwords = nltk.corpus.stopwords.words('english')\n",
+    "data['cleaned_text'] = data['review_text'].apply(lambda x: ' '.join([word.lower() for word in x.split() if word.lower() not in stopwords]))\n",
+    "data['cleaned_title'] = data['review_title'].apply(lambda x: ' '.join([word.lower() for word in x.split() if word.lower() not in stopwords]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b1413ae",
+   "metadata": {},
+   "source": [
+    "<!-- The lambda function takes each value from both columns (i.e., each string) and performs the following operations:\n",
+    "Split the text into individual words using the split() method.\n",
+    "Convert all the words to lowercase using the lower() method.\n",
+    "Check if each word is not a stopword (i.e., a common word that is typically removed from text during natural language processing). Stopwords are defined using a pre-defined list called 'stopwords', which is assumed to be defined elsewhere in the code.\n",
+    "Join all the remaining words back into a single string using the join() method.The resulting string is then stored in the 'cleaned_text' column for each corresponding row in the 'data' DataFrame. -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3e6a692c",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -620,17 +652,6 @@
     }
    ],
    "source": [
-    "# importing packages for sentimental analysis\n",
-    "from textblob import TextBlob\n",
-    "import nltk\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('punkt')\n",
-    "\n",
-    "# Preprocess the data\n",
-    "stopwords = nltk.corpus.stopwords.words('english')\n",
-    "data['cleaned_text'] = data['review_text'].apply(lambda x: ' '.join([word.lower() for word in x.split() if word.lower() not in stopwords]))\n",
-    "data['cleaned_title'] = data['review_title'].apply(lambda x: ' '.join([word.lower() for word in x.split() if word.lower() not in stopwords]))\n",
-    "\n",
     "# Perform sentiment analysis\n",
     "data['text_sentiment'] = data['cleaned_text'].apply(lambda x: TextBlob(x).sentiment.polarity)\n",
     "data['title_sentiment'] = data['cleaned_title'].apply(lambda x: TextBlob(x).sentiment.polarity)\n",
